c - crash     b - bug fix    e - enhancement    f - new feature  n - note

2.4.9
  b - Bugzilla bug 57. Check return value of malloc for tracejob for Linux
      (Chris Samuel - Univ. of Melbourne)
  b - fix so "gres" config gets displayed by pbsnodes
  b - use QSUBHOST as the default host for output files when no host is
      specified. (RT 7678)

2.4.8
  e - Bugzilla bug 22. HIGH_PRECISION_FAIRSHARE for fifo scheduling.
  c - no longer sigabrt with "running" jobs not in an execution queue. log
      an error. 
  b - fixed kill_delay. In order to fix and not change behavior, added 
      the parameter $kill_delay to mom's config. Activate by setting to true
  b - commented out a 'fi' left uncommented in contrib/init/pbs_server
  e - mapped 'qsub -P user:group' to qsub -P user -W group_list=group
  e - added -DQSUBHOSTNAME to allow qsub to determine PBS_O_HOST
  b - fixed segfault for when TORQUE thinks there's a nanny but there isn't
  b - reverted to old behavior where interactive scripts are checked for 
      directives and not run without a parameter.
  e - setting a queue's resource_max.nodes now actually restricts things,
      although so far it only limits based on the number of nodes (i.e. not
      ppn)
  f - added QSUBSENDGROUPLIST to qsub. This allows the server to know the 
      correct group name when disable_server_id_check is set to true and
      the user doesn't exist on the server.
  e - Bugzilla bug 54. Patch submitted by Bas van der Vlies to make pbs_mkdirs
      more robust, provide a help function and new option -C <chk_tree_location> 
  n - TORQUE 2.4.8 released on 29-04-10

2.4.7
  b - fixed a bug for when a resource_list has been set, but isn't completely
      initialized, causing a segfault
  b - stop counting down walltime remaining after a job is completed
  b - correctly display the number for tasks as used in TORQUE in qstat -a output
  b - no longer ignoring fread return values in linux cpuset code (gcc 4.3.3)